feat: /competencies/application page
